# RN72

./: App.tsx  package.json
android/: build.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/rn72/: MainActivity.java
ios/RN72.xcodeproj/: project.pbxproj
